<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollviewLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fillViewport="true"
            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/white">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/loginBannerConstraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints">
                    <ImageView
                        android:id="@+id/loginBannerImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="center"
                        android:src="@drawable/ic_login_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textTitle"
                        style="@style/TextViewStyle.REGULAR.BOLD_NEW"
                        android:layout_marginTop="20dp"
                        android:text="Login or sign up"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/loginBannerImageView"
                        tools:ignore="MissingConstraints"
                        tools:text="Login or sign up" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginBannerConstraintLayout"
                    tools:ignore="MissingConstraints">


                    <EditText
                        android:id="@+id/edtUserName"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_marginStart="19dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="19dp"
                        android:text=""
                        android:hint="Enter UserName"
                        android:textColorHint="@color/light_grey"
                        android:paddingEnd="45dp"
                        app:boxStrokeWidth="0dp"
                         />

                    <EditText
                        android:id="@+id/edtPassword"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_marginStart="19dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="19dp"
                        android:text=""
                        android:hint="Enter password"
                        android:textColorHint="@color/light_grey"
                        android:paddingEnd="45dp"
                        app:boxStrokeWidth="0dp"
                        app:layout_constraintTop_toBottomOf="@id/edtUserName"
                        tools:ignore="TextFields" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLogin"
                        style="@style/ButtonStyle"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="45dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="20dp"
                        android:text="Login"
                        tools:text="Login"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/edtPassword"
                         />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtSignUp"
                        style="@style/TextViewStyle.REGULAR"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center|start"
                        android:text="Create Account"
                        android:textAlignment="center"
                        android:textColor="@color/titleGray"
                        android:textSize="14dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btnLogin"
                        tools:ignore="MissingConstraints"
                        tools:text="Create Account" />

                </androidx.constraintlayout.widget.ConstraintLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>